--- a/styles.css
+++ b/styles.css
@@ -31,13 +31,13 @@ body {
 
 .clock:after {
   content: "";
-  width: 4%;
-  height: 4%;
-  background: #aaa;
+  width: 5%;
+  height: 5%;
+  background: #c6d7f2;
   position: absolute;
   top: 50%;
   left: 50%;
-  margin: -2% 0 0 -2%;
+  margin: -3% 0 0 -2%;
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
   border-radius: 50%;
